CMakePM: Add AUTOGEN output parsing

This way the AutoMOC and AutoUIC warnings and errors will be displayed
in the Issues pane.

Fixes: QTCREATORBUG-29345
Fixes: QTCREATORBUG-31597
Change-Id: Icd3e812383b363b3853772b7ac140bfb1fbd0ab1
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>